<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".calcularEdad">

    <TextView
        android:id="@+id/tvTituloEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="6dp"
        android:text="@string/tvTituloEdad"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:hint="@string/etDia" />

    <EditText
        android:id="@+id/etMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etMes"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etAno"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/amarillo"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/tvTitulo2" />

    <TextView
        android:id="@+id/tvEdadActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvEdadActual"
        android:textStyle="bold" />

</LinearLayout>